src/test/resources/invalid/07_with-without-value.fmx
<fmx:with>
  <main second="bibo" attr1="dodo" third="cecil">
  </main>
</fmx:with>